--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,10 @@
 [defaults]
-inventory = ~/plays/inventory
-roles_path = ~/plays/roles
+inventory = inventory
+roles_path = roles
 host_key_checking = False
 remote_user = automation
-#remote_user = vagrant
 forks = 10
-vault_password_file = ~/plays/vault_key
-#private_key_file = ~/.ssh/vagrant_rsa
+vault_password_file = vault_key
 [privilege_escalation]
 become = False
 
