Add missing notify parameter for new ssh handler

--- a/04_sshd.yml
+++ b/04_sshd.yml
@@ -25,6 +25,7 @@
           regex: "{{ item['regex'] }}"
           line: "{{ item['string'] }}"
         loop: "{{ data }}"
+        notify: "restart ssh"
 
     handlers:
 
